# deterministic-deployer-evm

./: .gitignore  Cargo.toml  README.md  foundry.toml
documentation/: Architechture.md  Commands.md  Dependencies.md  HighLevel.md  QuickStart.md
script/: DeployMockERC1363ReceiverMock.s.sol  DeployMockERC20.s.sol  DeployMockERC20ExcessDecimalsMock.s.sol  DeployMockERC20GetterHelper.s.sol  DeployMockERC20Reentrant.s.sol  DeployMockERC4626.s.sol
src/: lib.rs  main.rs
src/client/: mod.rs  public_client.rs  wallet_client.rs
src/data/: explorers_config.toml  mod.rs  rpc_config.toml
src/data/contracts/: contract.rs  mod.rs  registry.rs
src/data/keystore/: 5ff1f044-bc2c-4275-b409-f928be5f542e  b1948520-86c8-4e2f-b6a0-e69f3df8e9dc  dac795e2-448c-44bd-98fa-a5ae0566bd79  ks-0x12240F5668f61fd4dF728584206b21d70dD87232
src/helpers/: balance_checker.rs  code_checker.rs  contract_searcher.rs  mod.rs  pre_conditions.rs  pre_condtions.rs
src/types/: config.rs  constants.rs  errors.rs  mod.rs  types.rs
src/utils/: artifact.rs  create_2.rs  create_keystore.rs  deploy.rs  init_explorers.rs  init_rpc.rs  mod.rs  print_intro.rs  read_buf.rs  verifier.rs
test/stub-test/keystore/: create_keystore_bench.rs  test_create_keystore.rs
test/stub-test/public-client/: public_client_bench.rs  test_public_client.rs
test/stub-test/rpc-config/: rpc_bench.rs  test_get_rpc.rs
test/stub-test/wallet-client/: test_wallet_init.rs  wallet_init_bench.rs
