[package]
edition = "2024"
version = "0.1.0"
name = "deterministic-deployer-evm"

[dependencies]
toml = "1.0"
dotenv = "0.15"
alloy = { version = "1.0", features = ["full", "signer-keystore"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
eyre = "0.6"
rand = "0.8"
rpassword = "5"

[dev-dependencies]
futures = "0.3"
serial_test = "3"
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1", features = ["test-util", "rt", "macros"] }

[[test]]
name = "test_get_rpc"
path = "test/stub-test/rpc-config/test_get_rpc.rs"

[[test]]
name = "test_wallet_init"
path = "test/stub-test/wallet-client/test_wallet_init.rs"

[[test]]
name = "test_create_keystore"
path = "test/stub-test/keystore/test_create_keystore.rs"

[[bench]]
harness = false
name = "create_keystore_bench"
path = "test/stub-test/keystore/create_keystore_bench.rs"

[[bench]]
harness = false
name = "rpc_bench"
path = "test/stub-test/rpc-config/rpc_bench.rs"

[[bench]]
harness = false
name = "wallet_init_bench"
path = "test/stub-test/wallet-client/wallet_init_bench.rs"

[[test]]
name = "test_public_client"
path = "test/stub-test/public-client/test_public_client.rs"

[[bench]]
harness = false
name = "public_client_bench"
path = "test/stub-test/public-client/public_client_bench.rs"
